# libdat

./: .travis.yml  CMakeLists.txt  README.md  libdat.h  libdat.mm  read.mm  read_libimpl.mm  store.mm  store_libimpl.mm
travis/: build.sh
