cmake_minimum_required(VERSION 3.12)
project(dat)

include_directories(/usr/include/GNUstep /usr/lib/GNUstep/System/Library/Headers /usr/include)
add_compile_options("-fconstant-string-class=NSConstantString" "-Wall" "-g")
add_link_options("-g")
link_directories(${CMAKE_SOURCE_DIR}/build/)
link_libraries(gnustep-base objc)
add_executable(dat_store store.mm)
add_executable(dat_read read.mm)
add_library(dat STATIC libdat.mm libdat.h)
add_executable(dat_store_libimpl store_libimpl.mm)
add_executable(dat_read_libimpl read_libimpl.mm)
target_link_libraries(dat_store_libimpl dat)
target_link_libraries(dat_read_libimpl dat)